#303 Add scroll bar support to dropdown menus on dialogs, to prevent dropdowns with many items overflowing off the bottom of the Git Graph View.

--- a/web/styles/dialog.css
+++ b/web/styles/dialog.css
@@ -241,6 +241,7 @@
 	border-radius:0 0 4px 4px;
 	z-index:42;
 	text-align:left;
+	overflow-y:auto;
 }
 
 .customSelectOption{
